syntax="proto3";
package service.commands;
import "entity/trajectory_file.proto";
message GetDefaultTrajectoryResponse {
    entity.TrajectoryFile trajectory = 1;
}